# storage/api-docs/api-docs.json
@@ -300,12 +300,373 @@
                     }
                 }
             }
+        },
+        "/item": {
+            "get": {
+                "tags": [
+                    "Item"
+                ],
+                "summary": "Get all items",
+                "operationId": "f19b7dc62e5b6fbb07ac4bacae6b6b0d",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "integer",
+                                            "example": 200
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Items retrieved successfully."
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "category_id": {
+                                                        "type": "integer",
+                                                        "example": 2
+                                                    },
+                                                    "Nama_Barang": {
+                                                        "type": "string",
+                                                        "example": "Laptop"
+                                                    },
+                                                    "Stock": {
+                                                        "type": "integer",
+                                                        "example": 50
+                                                    },
+                                                    "Satuan": {
+                                                        "type": "string",
+                                                        "example": "Unit"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Item"
+                ],
+                "summary": "Create a new item",
+                "operationId": "34dd1881b4d244bed82faf13ca0a20d1",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "category_id",
+                                    "Nama_Barang",
+                                    "Stock",
+                                    "Satuan"
+                                ],
+                                "properties": {
+                                    "category_id": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "Nama_Barang": {
+                                        "type": "string",
+                                        "example": "Laptop"
+                                    },
+                                    "Stock": {
+                                        "type": "integer",
+                                        "example": 50
+                                    },
+                                    "Satuan": {
+                                        "type": "string",
+                                        "example": "Unit"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Item created successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "integer",
+                                            "example": 201
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Item created successfully."
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "category_id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "Nama_Barang": {
+                                                    "type": "string",
+                                                    "example": "Laptop"
+                                                },
+                                                "Stock": {
+                                                    "type": "integer",
+                                                    "example": 50
+                                                },
+                                                "Satuan": {
+                                                    "type": "string",
+                                                    "example": "Unit"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/item/{id}": {
+            "get": {
+                "tags": [
+                    "Item"
+                ],
+                "summary": "Get item by ID",
+                "operationId": "be46a956f8ef672c38bd7dede895021b",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Item retrieved successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "integer",
+                                            "example": 200
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Item retrieved successfully."
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "category_id": {
+                                                    "type": "integer",
+                                                    "example": 2
+                                                },
+                                                "Nama_Barang": {
+                                                    "type": "string",
+                                                    "example": "Laptop"
+                                                },
+                                                "Stock": {
+                                                    "type": "integer",
+                                                    "example": 50
+                                                },
+                                                "Satuan": {
+                                                    "type": "string",
+                                                    "example": "Unit"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Item not found"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Item"
+                ],
+                "summary": "Update item by ID",
+                "operationId": "4a4fb27cf4b2fe404b60a30d106c5b6f",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "category_id": {
+                                        "type": "integer",
+                                        "example": 2
+                                    },
+                                    "Nama_Barang": {
+                                        "type": "string",
+                                        "example": "Updated Laptop"
+                                    },
+                                    "Stock": {
+                                        "type": "integer",
+                                        "example": 60
+                                    },
+                                    "Satuan": {
+                                        "type": "string",
+                                        "example": "Piece"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Item updated successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "integer",
+                                            "example": 200
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Item updated successfully."
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "category_id": {
+                                                    "type": "integer",
+                                                    "example": 2
+                                                },
+                                                "Nama_Barang": {
+                                                    "type": "string",
+                                                    "example": "Updated Laptop"
+                                                },
+                                                "Stock": {
+                                                    "type": "integer",
+                                                    "example": 60
+                                                },
+                                                "Satuan": {
+                                                    "type": "string",
+                                                    "example": "Piece"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Item not found"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Item"
+                ],
+                "summary": "Delete item by ID",
+                "operationId": "e11aac014914126138f1f814687f5987",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Item deleted successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "integer",
+                                            "example": 200
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Item deleted successfully."
+                                        },
+                                        "data": {
+                                            "type": "string",
+                                            "example": null
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Item not found"
+                    }
+                }
+            }
         }
     },
     "tags": [
         {
             "name": "Category",
             "description": "Category"
+        },
+        {
+            "name": "Item",
+            "description": "Item"
         }
     ]
 }
